--- a/CfgMerge/mergeSimulation2013.ini
+++ b/CfgMerge/mergeSimulation2013.ini
@@ -1,9 +1,9 @@
 [general]
-tasks = cutsV23Dilepton
-basePath = /user/jschulte/CleaningMC/
+tasks = cutsV23DileptonTriggerEfficiency
+basePath = /user/jschulte/CleaningMC4/
 MCDatasets = .*_Summer12
 counterSum = True
-outPath = processedTrees_SimulationFixedMotherID
+outPath = processedTrees_Simulation
 
 [dileptonTree:cutsV23Dilepton]
 treeProducerName = FinalTrees
