--- a/Input/Master70X.ini
+++ b/Input/Master70X.ini
@@ -82,6 +82,16 @@ localdbspath =/TTJets_MSDecaysCKM_central_Tune4C_13TeV-madgraph-tauola/Spring14m
 #~ crosssection = 830
 #~ datasetpath = /TT_Tune4C_13TeV-pythia8-tauola/Phys14DR-PU20bx25_tsg_PHYS14_25_V1-v1/MINIAODSIM
 #~ localdbspath =/TT_Tune4C_13TeV-pythia8-tauola/Phys14DR-PU20bx25_tsg_PHYS14_25_V1-v1/MINIAODSIM
+#~ 
+#~ [TT_Tune4C_13TeV_pythia8_tauola_Phys14DR_PU20BX25_AOD]
+#~ status = CREATED
+#~ numevents = -1
+#~ kfactor = 1.
+#~ localevents = -1
+#~ groups = MC CMSSW70X at13TeV Aachen TT Pythia8 Phys14 AOD
+#~ crosssection = 830
+#~ datasetpath = /TT_Tune4C_13TeV-pythia8-tauola/Phys14DR-PU20bx25_tsg_PHYS14_25_V1-v1/AODSIM
+#~ localdbspath =/TT_Tune4C_13TeV-pythia8-tauola/Phys14DR-PU20bx25_tsg_PHYS14_25_V1-v1/AODSIM
 
 [TTJets_MSDecaysCKM_central_Tune4C_13TeV_madgraph_tauola_Phys14DR_PU20BX25_miniAOD]
 status = CREATED
@@ -93,35 +103,35 @@ crosssection = 830
 datasetpath = /TTJets_MSDecaysCKM_central_Tune4C_13TeV-madgraph-tauola/Phys14DR-PU20bx25_PHYS14_25_V1-v1/MINIAODSIM
 localdbspath =/TTJets_MSDecaysCKM_central_Tune4C_13TeV-madgraph-tauola/Phys14DR-PU20bx25_PHYS14_25_V1-v1/MINIAODSIM
 
-[TTJets_MSDecaysCKM_central_Tune4C_13TeV_madgraph_tauola_Phys14DR_PU30BX50_miniAOD]
+[TTJets_MSDecaysCKM_central_Tune4C_13TeV_madgraph_tauola_Phys14DR_PU20BX25_AOD]
 status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW70X at13TeV Aachen TT Pythia8 Phys14 MiniAOD Madgraph
+groups = MC CMSSW70X at13TeV Aachen TT Pythia8 Phys14 AOD Madgraph
 crosssection = 830
-datasetpath = /TTJets_MSDecaysCKM_central_Tune4C_13TeV-madgraph-tauola/Phys14DR-PU30bx50_PHYS14_25_V1-v1/MINIAODSIM
-localdbspath =/TTJets_MSDecaysCKM_central_Tune4C_13TeV-madgraph-tauola/Phys14DR-PU30bx50_PHYS14_25_V1-v1/MINIAODSIM
+datasetpath = /TTJets_MSDecaysCKM_central_Tune4C_13TeV-madgraph-tauola/Phys14DR-PU20bx25_PHYS14_25_V1-v1/AODSIM
+localdbspath =/TTJets_MSDecaysCKM_central_Tune4C_13TeV-madgraph-tauola/Phys14DR-PU20bx25_PHYS14_25_V1-v1/AODSIM
 
-[TTJets_MSDecaysCKM_central_Tune4C_13TeV_madgraph_tauola_Phys14DR_PU4BX50_miniAOD]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW70X at13TeV Aachen TT Pythia8 Phys14 MiniAOD Madgraph
-crosssection = 830
-datasetpath = /TTJets_MSDecaysCKM_central_Tune4C_13TeV-madgraph-tauola/Phys14DR-PU4bx50_PHYS14_25_V1-v1/MINIAODSIM
-localdbspath =/TTJets_MSDecaysCKM_central_Tune4C_13TeV-madgraph-tauola/Phys14DR-PU4bx50_PHYS14_25_V1-v1/MINIAODSIM
-
-[TT_Tune4C_13TeV_pythia8_tauola_Phys14DR_PU20BX25_AOD]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW70X at13TeV Aachen TT Pythia8 Phys14 AOD
-crosssection = 830
-datasetpath = /TT_Tune4C_13TeV-pythia8-tauola/Phys14DR-PU20bx25_tsg_PHYS14_25_V1-v1/AODSIM
-localdbspath =/TT_Tune4C_13TeV-pythia8-tauola/Phys14DR-PU20bx25_tsg_PHYS14_25_V1-v1/AODSIM
+#~ [TTJets_MSDecaysCKM_central_Tune4C_13TeV_madgraph_tauola_Phys14DR_PU30BX50_miniAOD]
+#~ status = CREATED
+#~ numevents = -1
+#~ kfactor = 1.
+#~ localevents = -1
+#~ groups = MC CMSSW70X at13TeV Aachen TT Pythia8 Phys14 MiniAOD Madgraph
+#~ crosssection = 830
+#~ datasetpath = /TTJets_MSDecaysCKM_central_Tune4C_13TeV-madgraph-tauola/Phys14DR-PU30bx50_PHYS14_25_V1-v1/MINIAODSIM
+#~ localdbspath =/TTJets_MSDecaysCKM_central_Tune4C_13TeV-madgraph-tauola/Phys14DR-PU30bx50_PHYS14_25_V1-v1/MINIAODSIM
+#~ 
+#~ [TTJets_MSDecaysCKM_central_Tune4C_13TeV_madgraph_tauola_Phys14DR_PU4BX50_miniAOD]
+#~ status = CREATED
+#~ numevents = -1
+#~ kfactor = 1.
+#~ localevents = -1
+#~ groups = MC CMSSW70X at13TeV Aachen TT Pythia8 Phys14 MiniAOD Madgraph
+#~ crosssection = 830
+#~ datasetpath = /TTJets_MSDecaysCKM_central_Tune4C_13TeV-madgraph-tauola/Phys14DR-PU4bx50_PHYS14_25_V1-v1/MINIAODSIM
+#~ localdbspath =/TTJets_MSDecaysCKM_central_Tune4C_13TeV-madgraph-tauola/Phys14DR-PU4bx50_PHYS14_25_V1-v1/MINIAODSIM
 
 [TTWJets_Tune4C_13TeV_madgraph_tauola_Phys14DR_PU20BX25_miniAOD]
 status = CREATED
