--- a/Input/default.ini
+++ b/Input/default.ini
@@ -42,8 +42,8 @@ CrabServer = Cern
 nEventsPerJob = 1000000
 #nEventsPerJob = 20000 #for skimming
 user_remote_dir = /store/$USER/skim342
-GRID.ce_white_list = T2_DE_RWTH
-USER.check_user_remote_dir=0
+#GRID.ce_white_list = T2_DE_RWTH
+#USER.check_user_remote_dir=0
 #for production: CMSSW.increment_seeds=generator,VtxSmeared
 
 [Analyzer:basicTask]
