--- a/Input/default53X_OntheFlyPDFUncertainties.ini
+++ b/Input/default53X_OntheFlyPDFUncertainties.ini
@@ -9,6 +9,7 @@ nEventsPerJob = 50000
 
 [53X]
 makeMETUncertainties = False
-dbsurl = http://cmsdbsprod.cern.ch/cms_dbs_prod_global/servlet/DBSServlet
+dbsurl = phys03
 globalTag = START53_V19PR::All
-master_list = <general|InputPath>/Master53XOnTheFly.ini
+master_list = <general|InputPath>/MasterSimplifiedModelT6bblledge.ini
+#~ master_list = <general|InputPath>/MasterSimplifiedModelSlepton.ini
