--- a/Analyzers/muonIsoTree.ini
+++ b/Analyzers/muonIsoTree.ini
@@ -3,7 +3,7 @@ type = GenericAnalyzer
 path = SuSyAachen.TagAndProbeTreeWriter.muonisotreewriter_cfi
 module = muonisotreewriter
 
-src = "<taskname>d0Muons"
+src = "<taskname>basicMuonsPAT"
 jets = "<taskname>baseJets"
 met = "<taskname>BaseMET"
 vertices = "<taskname>basicVertices"
