--- a/Input/default53X.ini
+++ b/Input/default53X.ini
@@ -26,7 +26,7 @@ groups = StandardModel SUSY
        Aachen Imperial FastSim FullSim Scan CMSSM
        Pythia Madgraph MCatNLO Alpgen Herwig Powheg
        TTJets ZJets WJets Diboson QCD MinBias Dilepton SingleTop Rare PythiaWZ AStar TT Dileptonic TTJetsSyst
-       LM0 LM1 LM2 LM3 LM4 LM5 LM6 LM7 LM8 LM9 LM9p LM9t175 LM10 LM11 LM12 LM13 LM2mhfeq360 SimplifiedModel SimplifiedModels GridScan
+       LM0 LM1 LM2 LM3 LM4 LM5 LM6 LM7 LM8 LM9 LM9p LM9t175 LM10 LM11 LM12 LM13 LM2mhfeq360 SimplifiedModel
        GM1 GM1a GM1b GM1c GM1d GM1e GM1f GM1g GMSB
        GM2
        SD_Photon10 SD_Photon15 SD_Photon20
