--- a/Input/default53X_OntheFlyMCSignal.ini
+++ b/Input/default53X_OntheFlyMCSignal.ini
@@ -10,5 +10,8 @@ nEventsPerJob = 20000
 [53X]
 
 dbsurl = phys03
-globalTag = START53_V27::All
-master_list = <general|InputPath>/Master53XOnTheFly.ini
+globalTag = START53_V19PR::All
+#~ master_list = <general|InputPath>/MasterSimplifiedModelT6bblledge.ini
+master_list = <general|InputPath>/MasterSimplifiedModelSlepton.ini
+#~ master_list = <general|InputPath>/MasterSimplifiedModelGrid.ini
+#~ master_list = <general|InputPath>/MasterSimplifiedModelGridDesy.ini
