change base tree analyzers to use normal tree maker

--- a/Analyzers/baseTreesNoTaus.ini
+++ b/Analyzers/baseTreesNoTaus.ini
@@ -1,10 +1,11 @@
-[Analyzer:BaseTrees]
+[Analyzer:FinalTrees]
 type = GenericAnalyzer
-path = SuSyAachen.DiLeptonHistograms.DiLeptonBaseTrees_cfi
-module = DiLeptonBaseTreesNoTaus
+path = SuSyAachen.DiLeptonHistograms.DiLeptonTrees_cfi
+module = DiLeptonTreesNoTaus
 electrons = "<taskname>basicElectronsPAT"
 muons = "<taskname>basicMuonsPAT"
 #taus = "<taskname>HpsTausAC"
 jets = "<taskname>qualityJets"
 bJets = "<taskname>qualityBJets"
 vertices = "<taskname>basicVertices"
+baseTrees = cms.InputTag("True")
