--- a/Analyzers/baseTreesNoTausMiniAOD.ini
+++ b/Analyzers/baseTreesNoTausMiniAOD.ini
@@ -1,10 +1,11 @@
-[Analyzer:BaseTrees]
+[Analyzer:FinalTrees]
 type = GenericAnalyzer
-path = SuSyAachen.DiLeptonHistograms.DiLeptonBaseTreesFromMiniAOD_cfi
-module = DiLeptonBaseTreesFromMiniAODNoTaus
+path = SuSyAachen.DiLeptonHistograms.DiLeptonTreesFromMiniAOD_cfi
+module = DiLeptonTreesFromMiniAODNoTaus
 electrons = "<taskname>basicElectronsPAT"
 muons = "<taskname>basicMuonsPAT"
 #taus = "<taskname>HpsTausAC"
 jets = "<taskname>qualityJets"
 bJets = "<taskname>qualityBJets"
 vertices = "<taskname>basicVertices"
+baseTrees = cms.InputTag("True")
