modify analyzers for trigger matching in main tree writer

--- a/Analyzers/finalTriggerTreesNoTausMiniAOD.ini
+++ b/Analyzers/finalTriggerTreesNoTausMiniAOD.ini
@@ -1,7 +1,7 @@
 [Analyzer:FinalTrees]
 type = GenericAnalyzer
-path = SuSyAachen.DiLeptonHistograms.DiLeptonTrees_cfi
-module = DiLeptonTreesNoTaus
+path = SuSyAachen.DiLeptonHistograms.DiLeptonTreesFromMiniAOD_cfi
+module = DiLeptonTreesFromMiniAODNoTaus
 electrons = "<taskname>IsoElectrons"
 muons = "<taskname>IsoMuons"
 #taus = "<taskname>HpsTausAC"
