add first configs for 74X

--- a/Input/default74X.ini
+++ b/Input/default74X.ini
@@ -6,7 +6,7 @@ SiteOutputPath = /pnfs/physik.rwth-aachen.de/cms/store/user
 SitePath = /store/user
 StatusPath = status/
 InputTagCollection = standardRECO
-CSA = 70X
+CSA = 74X
 email = $USER@cern.ch
 nSkimEvents = -1
 minFileSize = 10
@@ -72,13 +72,13 @@ nEventsPerJob = 50000
 
 
 #~ [62X]
-[70X]
+[74X]
 makeMETUncertainties = False
 monteCarloAvailable = True
 localdatapath = /user/$USER/LocalInput
 #~ globalTag =  START71_V7::All
 #~ globalTag =  PRE_LS172_V15::All
-globalTag =  PHYS14_25_V2::All
+globalTag =  MCRUN2_74_V9::All
 skimcfgname = templates/62Data/SusyPAT_dataJul13ReReco_cfg.py
 skimFromLocalDBS = False
 logname = skimming_
@@ -103,6 +103,6 @@ cmsstoragepath = <general|SitePath>
 famospath = /home/home4/institut_1b/nmohr/famos/223
 famosdatapath = <general|SitePath>
 storage_element= grid-srm.physik.rwth-aachen.de
-master_list = <general|InputPath>/Master70X.ini
+master_list = <general|InputPath>/Master74X.ini
 datasets_list = <general|InputPath>/datasets52X.list
 jobs_list = <general|InputPath>/jobsOctober09.list
