changes for running in 74X and writing out gen weights

--- a/Input/Master74X.ini
+++ b/Input/Master74X.ini
@@ -3,7 +3,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Diboson Powheg Spring15 25ns
+groups = MC CMSSW74X at13TeV Aachen Diboson Powheg Spring15 at25ns
 #0.3212*0.3212* 118.7 (NNLO QCD)
 crosssection = 12.246212527999999
 datasetpath = /WWTo2L2Nu_13TeV-powheg/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
@@ -15,7 +15,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Diboson Powheg Spring15 50ns
+groups = MC CMSSW74X at13TeV Aachen Diboson Powheg Spring15 at50ns
 #0.3212*0.3212* 118.7 (NNLO QCD)
 crosssection = 12.246212527999999
 datasetpath = /WWTo2L2Nu_13TeV-powheg/RunIISpring15DR74-Asympt50ns_MCRUN2_74_V9A-v1/MINIAODSIM
@@ -26,7 +26,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen WJets aMCatNLO Spring15 25ns
+groups = MC CMSSW74X at13TeV Aachen WJets aMCatNLO Spring15 at25ns
 #3* 20508.9 (NNLO QCD)
 crosssection = 61526.7
 datasetpath = /WJetsToLNu_TuneCUETP8M1_13TeV-amcatnloFXFX-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
@@ -37,7 +37,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen WJets aMCatNLO Spring15 50ns
+groups = MC CMSSW74X at13TeV Aachen WJets aMCatNLO Spring15 at50ns
 #3*20508.9 (NNLO QCD)
 crosssection = 61526.7
 datasetpath =  /WJetsToLNu_TuneCUETP8M1_13TeV-amcatnloFXFX-pythia8/RunIISpring15DR74-Asympt50ns_MCRUN2_74_V9A-v1/MINIAODSIM
@@ -48,7 +48,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen TT Powheg Spring15 50ns
+groups = MC CMSSW74X at13TeV Aachen TT Powheg Spring15 at50ns
 #0.105 (PDG BR) * 831.76  (NNLO QCD)
 crosssection = 87.3348
 datasetpath =  /TTTo2L2Nu_13TeV-powheg/RunIISpring15DR74-Asympt50ns_MCRUN2_74_V9A-v2/MINIAODSIM
@@ -70,7 +70,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen TT Madgraph Spring15 25ns
+groups = MC CMSSW74X at13TeV Aachen TT Madgraph Spring15 at25ns
 crosssection = 831.76
 datasetpath =  /TTJets_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v2/MINIAODSIM
 localdbspath =  /TTJets_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v2/MINIAODSIM
@@ -80,7 +80,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen TT Madgraph Spring15 50ns
+groups = MC CMSSW74X at13TeV Aachen TT Madgraph Spring15 at50ns
 crosssection = 831.76
 datasetpath =  /TTJets_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-Asympt50ns_MCRUN2_74_V9A-v1/MINIAODSIM
 localdbspath =  /TTJets_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-Asympt50ns_MCRUN2_74_V9A-v1/MINIAODSIM
@@ -91,7 +91,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen TT aMCatNLO Spring15 50ns
+groups = MC CMSSW74X at13TeV Aachen TT aMCatNLO Spring15 at50ns
 crosssection = 831.76
 datasetpath =  /TTJets_TuneCUETP8M1_13TeV-amcatnloFXFX-pythia8/RunIISpring15DR74-Asympt50ns_MCRUN2_74_V9A-v1/MINIAODSIM
 localdbspath =  /TTJets_TuneCUETP8M1_13TeV-amcatnloFXFX-pythia8/RunIISpring15DR74-Asympt50ns_MCRUN2_74_V9A-v1/MINIAODSIM
@@ -101,7 +101,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen TT aMCatNLO Spring15 25ns
+groups = MC CMSSW74X at13TeV Aachen TT aMCatNLO Spring15 at25ns
 crosssection = 831.76
 datasetpath =  /TTJets_TuneCUETP8M1_13TeV-amcatnloFXFX-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 localdbspath =  /TTJets_TuneCUETP8M1_13TeV-amcatnloFXFX-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
