--- a/Input/default74X.ini
+++ b/Input/default74X.ini
@@ -18,13 +18,13 @@ additionalProducers = EventCountProducer
 
 
 groups = StandardModel SUSY
-       Spring14 Phys14
+       Spring15
        PL1V1010a PL1V1010b PL1V1013a PL1V1015a PL1V1015b PL1V1200a PL1V1203b PL1V1203c
-       CMSSW70X
+       CMSSW74X
        Aachen Imperial FastSim Scan CMSSM
-       Pythia6 Pythia8 Madgraph MCatNLO Alpgen Herwig Powheg
+       Pythia6 Pythia8 Madgraph MCatNLO Alpgen Herwig Powheg aMCatNLO
        TTJets ZJets WJets Diboson QCD MinBias Dilepton SingleTop Rare PythiaWZ AStar TT Dileptonic ZZ
-       at13TeV
+       at13TeV at25ns at50ns noPU
        SingleElectron DoubleElectron SingleMu DoubleMu ElectronHad MuHad HT TauPlusX MuEG MET HTMHT 
        Data MC AOD RelVal MiniAOD
 
