add more spring15 samples and the fraction of negative gen weights to master list

--- a/Input/default74X.ini
+++ b/Input/default74X.ini
@@ -23,7 +23,7 @@ groups = StandardModel SUSY
        CMSSW74X
        Aachen Imperial FastSim Scan CMSSM
        Pythia6 Pythia8 Madgraph MCatNLO Alpgen Herwig Powheg aMCatNLO
-       TTJets ZJets WJets Diboson QCD MinBias Dilepton SingleTop Rare PythiaWZ AStar TT Dileptonic ZZ
+       TTJets ZJets WJets Diboson QCD MinBias Dilepton SingleTop Rare PythiaWZ AStar TT Dileptonic ZZ DrellYan
        at13TeV at25ns at50ns noPU
        SingleElectron DoubleElectron SingleMu DoubleMu ElectronHad MuHad HT TauPlusX MuEG MET HTMHT 
        Data MC AOD RelVal MiniAOD
