add configs to run electron MVA ID

--- a/Input/default74X.ini
+++ b/Input/default74X.ini
@@ -14,7 +14,7 @@ makeCountHistos = True
 
 #additionalProducers = SUSYPAT EventCountProducer
 #additionalProducers = SUSYPATdata EventCountProducer
-additionalProducers = EventCountProducer
+additionalProducers = EventCountProducer electronMVAProducer
 
 
 groups = StandardModel SUSY
