--- a/Input/Master74X.ini
+++ b/Input/Master74X.ini
@@ -341,3 +341,9 @@ negWeightFraction = 0.334
 datasetpath =  /TTJets_TuneCUETP8M1_13TeV-amcatnloFXFX-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 localdbspath =  /TTJets_TuneCUETP8M1_13TeV-amcatnloFXFX-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 
+
+[SynchFiles]
+groups = AOD
+datasetpath = 
+localdbspath =
+
