another sample of Spring15 on the master list

--- a/Input/Master74X.ini
+++ b/Input/Master74X.ini
@@ -35,6 +35,19 @@ negWeightFraction = 0.210
 datasetpath = /WZTo1L1Nu2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 localdbspath = /WZTo1L1Nu2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 
+[ZZTo2Q2Nu_aMCatNLO_Spring15_25ns]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns
+#0.3212*0.3212* 118.7 (NNLO QCD)
+crosssection = 12.246212527999999
+negWeightFraction = 0.0
+datasetpath = /ZZTo2Q2Nu_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
+localdbspath = /ZZTo2Q2Nu_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
+
+
 [ZZTo2L2Q_aMCatNLO_Spring15_25ns]
 status = CREATED
 numevents = -1
