configs to process 50ns data with old tight muon loose electron ID combo

--- a/CfgMerge/mergeData2015.ini
+++ b/CfgMerge/mergeData2015.ini
@@ -5,23 +5,23 @@ MCDatasets = .*_Summer12
 outPath = processedTrees
 counterSum = True
 
-[dileptonTree:cutsV23Dilepton]
+[dileptonTree:cutsV25Dilepton]
 treeProducerName = FinalTrees
 objects = EE EMu MuMu
 EEDataset = .*DoubleElectron*
 EESelection = 
-EEProcessors = overlapHighPt highPtSelectorSS
-EEFilter = overlapHighPt or highPtSelectorSS
+EEProcessors = overlapHighPt 
+EEFilter = overlapHighPt 
 
 EMuDataset = .*MuEG*
 EMuSelection = 
-EMuProcessors = overlapHighPt highPtSelectorSS
-EMuFilter = overlapHighPt or highPtSelectorSS
+EMuProcessors = overlapHighPt 
+EMuFilter = overlapHighPt 
 
 MuMuDataset = .*DoubleMu*
 MuMuSelection = 
-MuMuProcessors = overlapHighPt highPtSelectorSS
-MuMuFilter = overlapHighPt or highPtSelectorSS
+MuMuProcessors = overlapHighPt 
+MuMuFilter = overlapHighPt 
 
 OtherSelection = 
 
