--- a/Input/Master74X.ini
+++ b/Input/Master74X.ini
@@ -1,362 +1,48 @@
-[AStar_aMCatNLO_Spring15_25ns]
+[DoubleElectron_Run2015B_PromptRecov1]
 status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen DrellYan aMCatNLO Spring15 at25ns
-#8 TeV xsec scaled by the same factor as > 50 GeV
-crosssection = 1495.3847826086956
-negWeightFraction = 0.136
-datasetpath = /DYJetsToLL_M-10to50_TuneCUETP8M1_13TeV-amcatnloFXFX-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath = /DYJetsToLL_M-10to50_TuneCUETP8M1_13TeV-amcatnloFXFX-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-
-[ZJets_aMCatNLO_Spring15_25ns]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW74X at13TeV Aachen DrellYan aMCatNLO Spring15 at25ns
-#3*2008.4 (NNLO)
-crosssection = 6025.200000000001
-negWeightFraction = 0.165
-datasetpath = /DYJetsToLL_M-50_TuneCUETP8M1_13TeV-amcatnloFXFX-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v3/MINIAODSIM
-localdbspath = /DYJetsToLL_M-50_TuneCUETP8M1_13TeV-amcatnloFXFX-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v3/MINIAODSIM
-
-
-[WZTo1L1Nu2Q_aMCatNLO_Spring15_25ns]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns
-#0.3212*0.3212* 118.7 (NNLO QCD)
-crosssection = 12.246212527999999
-negWeightFraction = 0.210
-datasetpath = /WZTo1L1Nu2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath = /WZTo1L1Nu2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-
-[ZZTo2Q2Nu_aMCatNLO_Spring15_25ns]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns
-#0.3212*0.3212* 118.7 (NNLO QCD)
-crosssection = 12.246212527999999
-negWeightFraction = 0.0
-datasetpath = /ZZTo2Q2Nu_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath = /ZZTo2Q2Nu_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-
-
-[ZZTo2L2Q_aMCatNLO_Spring15_25ns]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns
-#0.3212*0.3212* 118.7 (NNLO QCD)
-crosssection = 12.246212527999999
-negWeightFraction = 0.0
-datasetpath = /ZZTo2L2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath = /ZZTo2L2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-
-
-[ZZTo4L_aMCatNLO_Spring15_25ns]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns
-#0.3212*0.3212* 118.7 (NNLO QCD)
-crosssection = 12.246212527999999
-negWeightFraction = 0.0
-datasetpath = /ZZTo4L_13TeV-amcatnloFXFX-pythia8/RunIISpring15DR74-Asympt25nsRaw_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath = /ZZTo4L_13TeV-amcatnloFXFX-pythia8/RunIISpring15DR74-Asympt25nsRaw_MCRUN2_74_V9-v1/MINIAODSIM
-
-[ZZTo4L_Powheg_Spring15_50ns]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Diboson Powheg Spring15 at50ns
-#0.3212*0.3212* 118.7 (NNLO QCD)
-crosssection = 12.246212527999999
-negWeightFraction = 0.0
-datasetpath = /ZZTo4L_13TeV_powheg_pythia8/RunIISpring15DR74-Asympt50ns_MCRUN2_74_V9A-v1/MINIAODSIM
-localdbspath = /ZZTo4L_13TeV_powheg_pythia8/RunIISpring15DR74-Asympt50ns_MCRUN2_74_V9A-v1/MINIAODSIM
-
-
-[ZZTo4L_Powheg_Spring15_25ns]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Diboson Powheg Spring15 at25ns
-#0.3212*0.3212* 118.7 (NNLO QCD)
-crosssection = 12.246212527999999
-negWeightFraction = 0.0
-datasetpath = /ZZTo4L_13TeV_powheg_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath = /ZZTo4L_13TeV_powheg_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-
-
-[WZTo3LNu_Powheg_Spring15_25ns]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Diboson Powheg Spring15 at25ns
-#0.3212*0.3212* 118.7 (NNLO QCD)
-crosssection = 12.246212527999999
-negWeightFraction = 0.0
-datasetpath = /WZTo3LNu_TuneCUETP8M1_13TeV-powheg-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath = /WZTo3LNu_TuneCUETP8M1_13TeV-powheg-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-
-
-[WWTo2L2Nu_Powheg_Spring15_25ns]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Diboson Powheg Spring15 at25ns
-#0.3212*0.3212* 118.7 (NNLO QCD)
-crosssection = 12.246212527999999
-negWeightFraction = 0.0
-datasetpath = /WWTo2L2Nu_13TeV-powheg/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath = /WWTo2L2Nu_13TeV-powheg/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-
-[WZTo3LNu_Powheg_Spring15_25ns]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Diboson Powheg Spring15 at25ns
-#0.3212*0.3212* 118.7 (NNLO QCD)
-crosssection = 12.246212527999999
-negWeightFraction = 0.0
-datasetpath = /WZTo3LNu_TuneCUETP8M1_13TeV-powheg-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath = /WZTo3LNu_TuneCUETP8M1_13TeV-powheg-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-
-
-[ZZTo4L_Powheg_Spring15_25ns]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Diboson Powheg Spring15 at25ns
-#??
+groups = Data CMSSW74X at13TeV Aachen at50ns DoubleElectron
 crosssection = 0.
-negWeightFraction = 0.0
-datasetpath = /ZZTo4L_13TeV_powheg_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath = /ZZTo4L_13TeV_powheg_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
+negWeightFraction = 0.
+datasetpath = /DoubleEG/Run2015B-PromptReco-v1/MINIAOD
+localdbspath = /DoubleEG/Run2015B-PromptReco-v1/MINIAOD
 
-[WWTo4Q_Powheg_Spring15_25ns]
+[DoubleMu_Run2015B_PromptRecov1]
 status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Diboson Powheg Spring15 at25ns
-#??
+groups = Data CMSSW74X at13TeV Aachen at50ns DoubleMu
 crosssection = 0.
-negWeightFraction = 0.0
-datasetpath = /WWTo4Q_13TeV-powheg/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v3/MINIAODSIM
-localdbspath = /WWTo4Q_13TeV-powheg/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v3/MINIAODSIM
+negWeightFraction = 0.
+datasetpath = /DoubleMuon/Run2015B-PromptReco-v1/MINIAOD
+localdbspath = /DoubleMuon/Run2015B-PromptReco-v1/MINIAOD
 
-[WWToLNuQQ_Powheg_Spring15_25ns]
+[MuEG_Run2015B_PromptRecov1]
 status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Diboson Powheg Spring15 at25ns
-#??
+groups = Data CMSSW74X at13TeV Aachen at50ns MuEG
 crosssection = 0.
-negWeightFraction = 0.0
-datasetpath = /WWToLNuQQ_13TeV-powheg/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath = /WWToLNuQQ_13TeV-powheg/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
+negWeightFraction = 0.
+datasetpath = /MuonEG/Run2015B-PromptReco-v1/MINIAOD
+localdbspath = /MuonEG/Run2015B-PromptReco-v1/MINIAOD
 
-
-[WWTo2L2Nu_Powheg_Spring15_50ns]
+[HT_Run2015B_PromptRecov1]
 status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Diboson Powheg Spring15 at50ns
-#0.3212*0.3212* 118.7 (NNLO QCD)
-crosssection = 12.246212527999999
-negWeightFraction = 0.0
-datasetpath = /WWTo2L2Nu_13TeV-powheg/RunIISpring15DR74-Asympt50ns_MCRUN2_74_V9A-v1/MINIAODSIM
-localdbspath = /WWTo2L2Nu_13TeV-powheg/RunIISpring15DR74-Asympt50ns_MCRUN2_74_V9A-v1/MINIAODSIM
-
-
-[ST_sChannel_4f_aMCatNLO_Spring15_25ns]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW74X at13TeV Aachen SingleTop Powheg Spring15 at25ns
-#
-crosssection = 11.36
-negWeightFraction = 0.188
-datasetpath = /ST_s-channel_4f_leptonDecays_13TeV-amcatnlo-pythia8_TuneCUETP8M1/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath = /ST_s-channel_4f_leptonDecays_13TeV-amcatnlo-pythia8_TuneCUETP8M1/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-
-[ST_tChannel_4f_aMCatNLO_Spring15_25ns]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW74X at13TeV Aachen SingleTop Powheg Spring15 at25ns
-#
-crosssection = 216.99
-negWeightFraction = 0.392
-datasetpath = /ST_t-channel_4f_leptonDecays_13TeV-amcatnlo-pythia8_TuneCUETP8M1/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath = /ST_t-channel_4f_leptonDecays_13TeV-amcatnlo-pythia8_TuneCUETP8M1/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-
-
-[ST_antitop_tChannel_4f_Powheg_Spring15_25ns]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW74X at13TeV Aachen SingleTop Powheg Spring15 at25ns
-#
-crosssection = 80.95
-negWeightFraction = 0.0
-datasetpath = /ST_t-channel_antitop_4f_leptonDecays_13TeV-powheg-pythia8_TuneCUETP8M1/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath = /ST_t-channel_antitop_4f_leptonDecays_13TeV-powheg-pythia8_TuneCUETP8M1/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-
-[ST_top_tChannel_4f_Powheg_Spring15_25ns]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW74X at13TeV Aachen SingleTop Powheg Spring15 at25ns
-#
-crosssection = 136.02
-negWeightFraction = 0.0
-datasetpath = /ST_t-channel_top_4f_leptonDecays_13TeV-powheg-pythia8_TuneCUETP8M1/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath = /ST_t-channel_top_4f_leptonDecays_13TeV-powheg-pythia8_TuneCUETP8M1/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-
-
-[ST_antitop_tWChannel_5f_Powheg_Spring15_25ns]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW74X at13TeV Aachen SingleTop Powheg Spring15 at25ns
-#
-crosssection = 35.6
-negWeightFraction = 0.0
-datasetpath = /ST_tW_antitop_5f_inclusiveDecays_13TeV-powheg-pythia8_TuneCUETP8M1/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath = /ST_tW_antitop_5f_inclusiveDecays_13TeV-powheg-pythia8_TuneCUETP8M1/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-
-[ST_top_tWChannel_5f_Powheg_Spring15_25ns]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW74X at13TeV Aachen SingleTop Powheg Spring15 at25ns
-#
-crosssection = 35.6
-negWeightFraction = 0.0
-datasetpath = /ST_tW_top_5f_inclusiveDecays_13TeV-powheg-pythia8_TuneCUETP8M1/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath = /ST_tW_top_5f_inclusiveDecays_13TeV-powheg-pythia8_TuneCUETP8M1/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-
-[WJetsToLNu_aMCatNLO_Spring15_25ns]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW74X at13TeV Aachen WJets aMCatNLO Spring15 at25ns
-#3* 20508.9 (NNLO QCD)
-crosssection = 61526.7
-negWeightFraction = 0.0
-datasetpath = /WJetsToLNu_TuneCUETP8M1_13TeV-amcatnloFXFX-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath = /WJetsToLNu_TuneCUETP8M1_13TeV-amcatnloFXFX-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-
-[WJetsToLNu_aMCatNLO_Spring15_50ns]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW74X at13TeV Aachen WJets aMCatNLO Spring15 at50ns
-#3*20508.9 (NNLO QCD)
-crosssection = 61526.7
-negWeightFraction = 0.0
-datasetpath =  /WJetsToLNu_TuneCUETP8M1_13TeV-amcatnloFXFX-pythia8/RunIISpring15DR74-Asympt50ns_MCRUN2_74_V9A-v1/MINIAODSIM
-localdbspath =  /WJetsToLNu_TuneCUETP8M1_13TeV-amcatnloFXFX-pythia8/RunIISpring15DR74-Asympt50ns_MCRUN2_74_V9A-v1/MINIAODSIM
-
-[TTTo2L2Nu_Powheg_Spring15_50ns]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW74X at13TeV Aachen TT Powheg Spring15 at50ns
-#0.105 (PDG BR) * 831.76  (NNLO QCD)
-crosssection = 87.3348
-negWeightFraction = 0.0
-datasetpath =  /TTTo2L2Nu_13TeV-powheg/RunIISpring15DR74-Asympt50ns_MCRUN2_74_V9A-v2/MINIAODSIM
-localdbspath =  /TTTo2L2Nu_13TeV-powheg/RunIISpring15DR74-Asympt50ns_MCRUN2_74_V9A-v2/MINIAODSIM
-
-
-[TTJets_Madgraph_MLM_Spring15_noPU]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW74X at13TeV Aachen TT Madgraph Spring15 noPU
-crosssection = 831.76
-negWeightFraction = 0.0
-datasetpath =  /TTJets_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-AsymptNoPU_MCRUN2_74_V9A-v2/MINIAODSIM
-localdbspath =  /TTJets_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-AsymptNoPU_MCRUN2_74_V9A-v2/MINIAODSIM
-
-[TTJets_Madgraph_MLM_Spring15_25ns]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW74X at13TeV Aachen TT Madgraph Spring15 at25ns
-crosssection = 831.76
-negWeightFraction = 0.0
-datasetpath =  /TTJets_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v2/MINIAODSIM
-localdbspath =  /TTJets_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v2/MINIAODSIM
-
-[TTJets_Madgraph_MLM_Spring15_50ns]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW74X at13TeV Aachen TT Madgraph Spring15 at50ns
-crosssection = 831.76
-negWeightFraction = 0.0
-datasetpath =  /TTJets_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-Asympt50ns_MCRUN2_74_V9A-v1/MINIAODSIM
-localdbspath =  /TTJets_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-Asympt50ns_MCRUN2_74_V9A-v1/MINIAODSIM
-
-
-[TTJets_aMCatNLO_FXFX_Spring15_50ns]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW74X at13TeV Aachen TT aMCatNLO Spring15 at50ns
-crosssection = 831.76
-negWeightFraction = 0.334
-datasetpath =  /TTJets_TuneCUETP8M1_13TeV-amcatnloFXFX-pythia8/RunIISpring15DR74-Asympt50ns_MCRUN2_74_V9A-v1/MINIAODSIM
-localdbspath =  /TTJets_TuneCUETP8M1_13TeV-amcatnloFXFX-pythia8/RunIISpring15DR74-Asympt50ns_MCRUN2_74_V9A-v1/MINIAODSIM
-
-[TTJets_aMCatNLO_FXFX_Spring15_25ns]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW74X at13TeV Aachen TT aMCatNLO Spring15 at25ns
-crosssection = 831.76
-negWeightFraction = 0.334
-datasetpath =  /TTJets_TuneCUETP8M1_13TeV-amcatnloFXFX-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath =  /TTJets_TuneCUETP8M1_13TeV-amcatnloFXFX-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-
+groups = Data CMSSW74X at13TeV Aachen at50ns HT
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath = /JetHT/Run2015B-PromptReco-v1/MINIAOD
+localdbspath = /JetHT/Run2015B-PromptReco-v1/MINIAOD
 
 [SynchFiles]
 groups = AOD
 datasetpath = 
 localdbspath =
-
