add configs for running new ele MVA and JEC corrected jets on MiniAOD

--- a/Input/default74X.ini
+++ b/Input/default74X.ini
@@ -14,7 +14,7 @@ makeCountHistos = True
 
 #additionalProducers = SUSYPAT EventCountProducer
 #additionalProducers = SUSYPATdata EventCountProducer
-additionalProducers = EventCountProducer electronMVAProducer
+additionalProducers = EventCountProducer electronMVAProducer corrJetsProducerMC
 
 
 groups = StandardModel SUSY
