--- a/Input/Master74X_25nsMC.ini
+++ b/Input/Master74X_25nsMC.ini
@@ -31,7 +31,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen DrellYan aMCatNLO Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen DrellYan Madgraph Spring15 at25ns
 #8 TeV xsec scaled by the same factor as > 50 GeV
 crosssection = 0.0
 negWeightFraction = 0.0
@@ -153,6 +153,32 @@ localdbspath =  /DYJetsToLL_M-5to50_HT-600toInf_TuneCUETP8M1_13TeV-madgraphMLM-p
 
 ##### Diboson aMCatNLO
 
+[WWTo1L1Nu2Q_aMCatNLO_Spring15_25ns]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns
+#(NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns)
+crosssection = 0.0 
+negWeightFraction = 0.0
+datasetpath = /WWTo1L1Nu2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
+localdbspath = /WWTo1L1Nu2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
+
+
+[WZTo1L3Nu_aMCatNLO_Spring15_25ns]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns
+#(NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns)
+crosssection = 0.0
+negWeightFraction = 0.0
+datasetpath = /WZTo1L3Nu_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
+localdbspath = /WZTo1L3Nu_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
+
+
 [WZTo1L1Nu2Q_aMCatNLO_Spring15_25ns]
 status = CREATED
 numevents = -1
@@ -173,21 +199,10 @@ localevents = -1
 groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns
 #(NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns)
 crosssection = 0.0
-negWeightFraction = 0.210
+negWeightFraction = 
 datasetpath = /WZTo2L2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 localdbspath = /WZTo2L2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 
-[WZTo3LNu_aMCatNLO_Spring15_25ns]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns
-#(NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns)
-crosssection = 4.42965 
-negWeightFraction = 0.210
-datasetpath = /WZTo3LNu_TuneCUETP8M1_13TeV-powheg-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath = /WZTo3LNu_TuneCUETP8M1_13TeV-powheg-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 
 [ZZTo2Q2Nu_aMCatNLO_Spring15_25ns]
 status = CREATED
@@ -196,7 +211,7 @@ kfactor = 1.
 localevents = -1
 groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns
 crosssection = 0.0
-negWeightFraction = 0.0
+negWeightFraction = 0.193
 datasetpath = /ZZTo2Q2Nu_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 localdbspath = /ZZTo2Q2Nu_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 
@@ -208,7 +223,7 @@ kfactor = 1.
 localevents = -1
 groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns
 crosssection = 0.0
-negWeightFraction = 0.0
+negWeightFraction = 0.184
 datasetpath = /ZZTo2L2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 localdbspath = /ZZTo2L2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 
@@ -220,7 +235,7 @@ kfactor = 1.
 localevents = -1
 groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns
 crosssection = 0.0
-negWeightFraction = 0.0
+negWeightFraction = 0.155
 datasetpath = /ZZTo4L_13TeV-amcatnloFXFX-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v2/MINIAODSIM
 localdbspath = /ZZTo4L_13TeV-amcatnloFXFX-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v2/MINIAODSIM
 
@@ -231,10 +246,24 @@ kfactor = 1.
 localevents = -1
 groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns
 crosssection = 0.0
-negWeightFraction = 0.0
+negWeightFraction = 0.191
 datasetpath = /ZZTo4Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 localdbspath = /ZZTo4Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 
+
+##### Triboson aMCatNLO
+
+[WZZ_aMCatNLO_Spring15_25ns]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns
+# LO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns#Triboson
+crosssection = 0.05565
+negWeightFraction = 0.0
+datasetpath = /WZZ_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
+localdbspath = /WZZ_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 
 #### Diboson Powheg
 
@@ -386,7 +415,7 @@ localevents = -1
 groups = MC CMSSW74X at13TeV Aachen WJets aMCatNLO Spring15 at25ns
 #3* 20508.9 (NNLO QCD)
 crosssection = 61526.7
-negWeightFraction = 0.0
+negWeightFraction = 0.158
 datasetpath = /WJetsToLNu_TuneCUETP8M1_13TeV-amcatnloFXFX-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 localdbspath = /WJetsToLNu_TuneCUETP8M1_13TeV-amcatnloFXFX-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 
@@ -519,6 +548,18 @@ negWeightFraction = 0.0
 datasetpath =  /TTJets_SingleLeptFromT_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 localdbspath =  /TTJets_SingleLeptFromT_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 
+[TTJets_SemiLeptFromT_Madgraph_MLM_Spring15_25ns_v2]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = MC CMSSW74X at13TeV Aachen TT Madgraph Spring15 at25ns
+# NNLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns * PDG BR in semileptonic decay / 2
+crosssection = 182.15544
+negWeightFraction = 0.0
+datasetpath =  /TTJets_SingleLeptFromT_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9_ext1-v1/MINIAODSIM
+localdbspath =  /TTJets_SingleLeptFromT_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9_ext1-v1/MINIAODSIM
+
 [TTJets_SemiLeptFromTbar_Madgraph_MLM_Spring15_25ns_v2]
 status = CREATED
 numevents = -1
@@ -584,7 +625,7 @@ kfactor = 1.
 localevents = -1
 groups = MC CMSSW74X at13TeV Aachen TT aMCatNLO Spring15 at25ns
 crosssection = 831.76
-negWeightFraction = 0.0
+negWeightFraction = 0.254
 datasetpath =  /TT_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 localdbspath =  /TT_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 
@@ -595,7 +636,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen TT aMCatNLO Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen TT Powheg Spring15 at25ns
 crosssection = 831.76
 negWeightFraction = 0.0
 datasetpath =  /TT_TuneCUETP8M1_13TeV-powheg-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v2/MINIAODSIM
@@ -606,22 +647,12 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen TT aMCatNLO Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen TT Powheg Spring15 at25ns
 crosssection = 87.31
 negWeightFraction = 0.0
 datasetpath =   /TTTo2L2Nu_13TeV-powheg/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 localdbspath =  /TTTo2L2Nu_13TeV-powheg/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 
-[TT_Powheg_Spring15_25ns]
-status = CREATED
-numevents = -1
-kfactor = 1.
-localevents = -1
-groups = MC CMSSW74X at13TeV Aachen TT aMCatNLO Spring15 at25ns
-crosssection = 831.76
-negWeightFraction = 0.0
-datasetpath =  /TT_TuneCUETP8M1_13TeV-powheg-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v2/MINIAODSIM
-localdbspath =  /TT_TuneCUETP8M1_13TeV-powheg-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v2/MINIAODSIM
 
 
 ## ttV
@@ -634,7 +665,7 @@ localevents = -1
 groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns
 # LO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
 crosssection = 0.2529 
-negWeightFraction = 0.0
+negWeightFraction =  0.268
 datasetpath =  /TTZToLLNuNu_M-10_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 localdbspath =  /TTZToLLNuNu_M-10_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 
@@ -646,7 +677,7 @@ localevents = -1
 groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns
 # NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
 crosssection = 0.5297
-negWeightFraction = 0.0
+negWeightFraction = 0.266
 datasetpath =  /TTZToQQ_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 localdbspath =  /TTZToQQ_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 
@@ -658,9 +689,34 @@ localevents = -1
 groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns
 # NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
 crosssection = 0.2043
-negWeightFraction = 0.0
+negWeightFraction = 0.243
 datasetpath =  /TTWJetsToLNu_TuneCUETP8M1_13TeV-amcatnloFXFX-madspin-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 localdbspath =  /TTWJetsToLNu_TuneCUETP8M1_13TeV-amcatnloFXFX-madspin-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
+
+[TTWToQQ_aMCatNLO_FXFX_Spring15_25ns]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns
+# NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
+crosssection = 0.0
+negWeightFraction = 0.0
+datasetpath =  /TTWJetsToQQ_TuneCUETP8M1_13TeV-amcatnloFXFX-madspin-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
+localdbspath =  /TTWJetsToQQ_TuneCUETP8M1_13TeV-amcatnloFXFX-madspin-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
+
+
+[TTG_aMCatNLO_FXFX_Spring15_25ns]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns
+# NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
+crosssection = 0.0
+negWeightFraction = 0.0
+datasetpath =  /TTGJets_TuneCUETP8M1_13TeV-amcatnloFXFX-madspin-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
+localdbspath =  /TTGJets_TuneCUETP8M1_13TeV-amcatnloFXFX-madspin-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 
 ### Rare stuff
 
@@ -672,7 +728,7 @@ localevents = -1
 groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns
 # NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
 crosssection = 0.0
-negWeightFraction = 0.0
+negWeightFraction = 0.291
 datasetpath =  /TTTT_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 localdbspath =  /TTTT_TuneCUETP8M1_13TeV-amcatnlo-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 
@@ -685,7 +741,7 @@ kfactor = 1.
 localevents = -1
 groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns
 crosssection = 0.0
-negWeightFraction = 0.210
+negWeightFraction = 0.367
 datasetpath = /tZq_ll_4f_13TeV-amcatnlo-pythia8_TuneCUETP8M1/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v2/MINIAODSIM
 localdbspath = /tZq_ll_4f_13TeV-amcatnlo-pythia8_TuneCUETP8M1/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v2/MINIAODSIM
 
