Updates and fixes for 13TeV data taking

--- a/Input/50nsData.ini
+++ b/Input/50nsData.ini
@@ -1,8 +1,8 @@
 [general]
-additionalProducers = EventCountProducer
+additionalProducers = EventCountProducer electronMVAProducer corrJetsProducer
 [crab]
-lumi_mask =/afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/certification/Collisions15/13TeV/Cert_246908-251883_13TeV_PromptReco_Collisions15_JSON.txt 
+lumi_mask =/afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/certification/Collisions15/13TeV/Cert_246908-255031_13TeV_PromptReco_Collisions15_50ns_JSON_v2.txt
 
 
 [74X]
-globalTag = GR_P_V56::All
+globalTag = 74X_dataRun2_Prompt_v2
