--- a/Input/default74X.ini
+++ b/Input/default74X.ini
@@ -1,6 +1,6 @@
 [general]
 InputPath = Input/
-OutputPath = /user/jschulte/AnalysisData/
+OutputPath = /user/schomakers/AnalysisData/
 LocalOutputPath = /user/jschulte/jobOutput/624Test
 SiteOutputPath = /pnfs/physik.rwth-aachen.de/cms/store/user
 SitePath = /store/user
@@ -14,7 +14,7 @@ makeCountHistos = True
 
 #additionalProducers = SUSYPAT EventCountProducer
 #additionalProducers = SUSYPATdata EventCountProducer
-additionalProducers = EventCountProducer electronMVAProducer corrJetsProducerMC
+additionalProducers = EventCountProducer electronMVAProducer corrJetsProducer
 
 
 groups = StandardModel SUSY
@@ -27,18 +27,23 @@ groups = StandardModel SUSY
        at13TeV at25ns at50ns noPU
        SingleElectron DoubleElectron SingleMu DoubleMu ElectronHad MuHad HT TauPlusX MuEG MET HTMHT 
        Data MC AOD RelVal MiniAOD
+       Run2015B Run2015C Run2015D 
 
 [crab]
 StageoutSite = T2_DE_RWTH
 #~ CrabServer = Cern
 total_number_of_lumis = -1
-lumis_per_job = 5
+lumis_per_job = 50
+lumi_mask = ""
 # lumi recovery / skimming
 #CMSSW.lumis_per_job = 20
 
 publish = False
 pubDBSURL = phys03
 # all (merged)
+#~ additional_input_files = ["/afs/cern.ch/user/c/cschomak/public/Summer15_25nsV2MC.db"]
+additional_input_files = ["/afs/cern.ch/user/c/cschomak/public/Summer15_25nsV2_DATA.db"]
+#~ additional_input_files = ["/afs/cern.ch/user/c/cschomak/public/Summer15_50nsV5_DATA.db"]
 
 # first json
 
@@ -78,7 +83,7 @@ monteCarloAvailable = True
 localdatapath = /user/$USER/LocalInput
 #~ globalTag =  START71_V7::All
 #~ globalTag =  PRE_LS172_V15::All
-globalTag =  MCRUN2_74_V9::All
+globalTag =  74X_dataRun2_Prompt_v2
 skimcfgname = templates/62Data/SusyPAT_dataJul13ReReco_cfg.py
 skimFromLocalDBS = False
 logname = skimming_
@@ -97,8 +102,8 @@ analogpath = <general|OutputPath>/LOG/analysis
 #~ inputDBS = phys03
 inputDBS = global
 storagepath = <general|SitePath>/cschomak
-histogramstoragepath = <general|SitePath>/jschulte/data/Histos
-histogramoutputpath = <general|SiteOutputPath>/jschulte/data/Histos
+histogramstoragepath = <general|SitePath>/cschomak/data/Histos
+histogramoutputpath = <general|SiteOutputPath>/cschomak/data/Histos
 cmsstoragepath = <general|SitePath>
 famospath = /home/home4/institut_1b/nmohr/famos/223
 famosdatapath = <general|SitePath>
