--- a/Input/Master74X_25nsMC.ini
+++ b/Input/Master74X_25nsMC.ini
@@ -160,7 +160,7 @@ kfactor = 1.
 localevents = -1
 groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns
 #(NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns)
-crosssection = 0.0 
+crosssection = 0
 negWeightFraction = 0.0
 datasetpath = /WWTo1L1Nu2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 localdbspath = /WWTo1L1Nu2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
@@ -186,7 +186,7 @@ kfactor = 1.
 localevents = -1
 groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns
 #(NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns)
-crosssection = 10.96 
+crosssection = 10.71 
 negWeightFraction = 0.210
 datasetpath = /WZTo1L1Nu2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 localdbspath = /WZTo1L1Nu2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
@@ -198,8 +198,8 @@ kfactor = 1.
 localevents = -1
 groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns
 #(NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns)
-crosssection = 0.0
-negWeightFraction = 
+crosssection = 5.60 
+negWeightFraction = 0.0
 datasetpath = /WZTo2L2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 localdbspath = /WZTo2L2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 
@@ -210,7 +210,7 @@ numevents = -1
 kfactor = 1.
 localevents = -1
 groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns
-crosssection = 0.0
+crosssection = 4.04
 negWeightFraction = 0.193
 datasetpath = /ZZTo2Q2Nu_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 localdbspath = /ZZTo2Q2Nu_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
@@ -222,7 +222,7 @@ numevents = -1
 kfactor = 1.
 localevents = -1
 groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns
-crosssection = 0.0
+crosssection = 3.28
 negWeightFraction = 0.184
 datasetpath = /ZZTo2L2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 localdbspath = /ZZTo2L2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
@@ -234,7 +234,7 @@ numevents = -1
 kfactor = 1.
 localevents = -1
 groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns
-crosssection = 0.0
+crosssection = 1.212
 negWeightFraction = 0.155
 datasetpath = /ZZTo4L_13TeV-amcatnloFXFX-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v2/MINIAODSIM
 localdbspath = /ZZTo4L_13TeV-amcatnloFXFX-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v2/MINIAODSIM
@@ -273,10 +273,24 @@ numevents = -1
 kfactor = 1.
 localevents = -1
 groups = MC CMSSW74X at13TeV Aachen Diboson Powheg Spring15 at25ns
-crosssection = 0.0
+# NLO from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
+crosssection = 1.256
 negWeightFraction = 0.0
 datasetpath = /ZZTo4L_13TeV_powheg_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 localdbspath = /ZZTo4L_13TeV_powheg_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
+
+[ZZTo2L2Nu_Powheg_Spring15_25ns]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = MC CMSSW74X at13TeV Aachen Diboson Powheg Spring15 at25ns
+# NLO from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
+crosssection = 0.564 
+negWeightFraction = 0.0
+datasetpath = /ZZTo2L2Nu_13TeV_powheg_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
+localdbspath = /ZZTo2L2Nu_13TeV_powheg_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
+
 
 [WZTo3LNu_Powheg_Spring15_25ns]
 status = CREATED
@@ -284,7 +298,8 @@ numevents = -1
 kfactor = 1.
 localevents = -1
 groups = MC CMSSW74X at13TeV Aachen Diboson Powheg Spring15 at25ns
-crosssection = 0.0
+# NLO from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
+crosssection = 4.102 
 negWeightFraction = 0.0
 datasetpath = /WZTo3LNu_TuneCUETP8M1_13TeV-powheg-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 localdbspath = /WZTo3LNu_TuneCUETP8M1_13TeV-powheg-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
@@ -295,7 +310,8 @@ numevents = -1
 kfactor = 1.
 localevents = -1
 groups = MC CMSSW74X at13TeV Aachen Diboson Powheg Spring15 at25ns
-crosssection = 0
+# NLO from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
+crosssection = 10.481
 negWeightFraction = 0.0
 datasetpath = /WWTo2L2Nu_13TeV-powheg/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 localdbspath = /WWTo2L2Nu_13TeV-powheg/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
@@ -307,8 +323,8 @@ numevents = -1
 kfactor = 1.
 localevents = -1
 groups = MC CMSSW74X at13TeV Aachen Diboson Powheg Spring15 at25ns
-#??
-crosssection = 0.
+# NLO from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
+crosssection = 45.20
 negWeightFraction = 0.0
 datasetpath = /WWTo4Q_13TeV-powheg/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v3/MINIAODSIM
 localdbspath = /WWTo4Q_13TeV-powheg/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v3/MINIAODSIM
@@ -319,8 +335,8 @@ numevents = -1
 kfactor = 1.
 localevents = -1
 groups = MC CMSSW74X at13TeV Aachen Diboson Powheg Spring15 at25ns
-#??
-crosssection = 0.
+# NLO from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
+crosssection = 43.53
 negWeightFraction = 0.0
 datasetpath = /WWToLNuQQ_13TeV-powheg/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 localdbspath = /WWToLNuQQ_13TeV-powheg/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
@@ -740,10 +756,23 @@ numevents = -1
 kfactor = 1.
 localevents = -1
 groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns
-crosssection = 0.0
+# NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
+crosssection = 0.0758
 negWeightFraction = 0.367
 datasetpath = /tZq_ll_4f_13TeV-amcatnlo-pythia8_TuneCUETP8M1/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v2/MINIAODSIM
 localdbspath = /tZq_ll_4f_13TeV-amcatnlo-pythia8_TuneCUETP8M1/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v2/MINIAODSIM
+
+[TZQ_NuNu_aMCatNLO_Spring15_25ns]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns
+# NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
+crosssection = 0.1379
+negWeightFraction = 0.367
+datasetpath = /tZq_nunu_4f_13TeV-amcatnlo-pythia8_TuneCUETP8M1/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v2/MINIAODSIM
+localdbspath = /tZq_nunu_4f_13TeV-amcatnlo-pythia8_TuneCUETP8M1/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v2/MINIAODSIM
 
 [SynchFiles]
 groups = AOD
