lumi_mask reimplemented and minor updates for 13 TeV data taking

--- a/Input/25nsMC.ini
+++ b/Input/25nsMC.ini
@@ -1,8 +1,9 @@
 [general]
-
+additionalProducers = EventCountProducer electronMVAProducer corrJetsProducerMC
 [crab]
 
 
 
 [74X]
 master_list = <general|InputPath>/Master74X_25nsMC.ini
+globalTag = MCRUN2_74_V9
