--- a/Input/default74X.ini
+++ b/Input/default74X.ini
@@ -34,6 +34,7 @@ StageoutSite = T2_DE_RWTH
 #~ CrabServer = Cern
 total_number_of_lumis = -1
 lumis_per_job = 100
+events_per_job = 5
 lumi_mask = ""
 # lumi recovery / skimming
 #CMSSW.lumis_per_job = 20
@@ -41,9 +42,9 @@ lumi_mask = ""
 publish = False
 pubDBSURL = phys03
 # all (merged)
-#~ additional_input_files = ["/afs/cern.ch/user/c/cschomak/public/Summer15_25nsV2MC.db"]
-additional_input_files = ["/afs/cern.ch/user/c/cschomak/public/Summer15_25nsV2_DATA.db"]
-#~ additional_input_files = ["/afs/cern.ch/user/c/cschomak/public/Summer15_50nsV5_DATA.db"]
+additional_input_files = ["/afs/cern.ch/user/c/cschomak/public/Summer15_25nsV2_MC.db","/afs/cern.ch/user/c/cschomak/public/Summer15_25nsV2_DATA.db","/afs/cern.ch/user/c/cschomak/public/Summer15_50nsV4_DATA.db"]
+#~ additional_input_files = ["/afs/cern.ch/user/c/cschomak/public/Summer15_25nsV2_DATA.db"]
+#~ additional_input_files = ["/afs/cern.ch/user/c/cschomak/public/Summer15_50nsV4_DATA.db"]
 
 # first json
 
