--- a/Input/Master74X_25nsMC.ini
+++ b/Input/Master74X_25nsMC.ini
@@ -5,8 +5,8 @@ numevents = -1
 kfactor = 1.
 localevents = -1
 groups = MC CMSSW74X at13TeV Aachen DrellYan aMCatNLO Spring15 at25ns
-#8 TeV xsec scaled by the same factor as > 50 GeV
-crosssection = 1495.3847826086956
+#from ETH via AN draft
+crosssection = 18610
 negWeightFraction = 0.136
 datasetpath = /DYJetsToLL_M-10to50_TuneCUETP8M1_13TeV-amcatnloFXFX-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 localdbspath = /DYJetsToLL_M-10to50_TuneCUETP8M1_13TeV-amcatnloFXFX-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
@@ -17,8 +17,8 @@ numevents = -1
 kfactor = 1.
 localevents = -1
 groups = MC CMSSW74X at13TeV Aachen DrellYan aMCatNLO Spring15 at25ns
-#3*2008.4 (NNLO)
-crosssection = 6025.200000000001
+#from ETH via AN draft
+crosssection = 6104
 negWeightFraction = 0.165
 datasetpath = /DYJetsToLL_M-50_TuneCUETP8M1_13TeV-amcatnloFXFX-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v3/MINIAODSIM
 localdbspath = /DYJetsToLL_M-50_TuneCUETP8M1_13TeV-amcatnloFXFX-pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v3/MINIAODSIM
@@ -340,6 +340,8 @@ crosssection = 43.53
 negWeightFraction = 0.0
 datasetpath = /WWToLNuQQ_13TeV-powheg/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
 localdbspath = /WWToLNuQQ_13TeV-powheg/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
+
+
 
 
 ######### Single Top Powheg
