CfgMerge/mergeMiniAODTrigger fixed

--- a/CfgMerge/mergeMiniAODTrigger.ini
+++ b/CfgMerge/mergeMiniAODTrigger.ini
@@ -9,17 +9,17 @@ counterSum = True
 treeProducerName = FinalTrees
 objects = EE EMu MuMu
 EEDataset = .*DoubleElectron*
-EESelection = 
+EESelection = HLTDiEle
 EEProcessors = overlapHighPt
 EEFilter = overlapHighPt
 
 EMuDataset = .*MuEG*
-EMuSelection = 
+EMuSelection = HLTMuEG
 EMuProcessors = overlapHighPt
 EMuFilter = overlapHighPt
 
 MuMuDataset = .*DoubleMu*
-MuMuSelection = 
+MuMuSelection = HLTDiMu
 MuMuProcessors = overlapHighPt
 MuMuFilter = overlapHighPt
 
