add new JEC file

--- a/Input/50nsData.ini
+++ b/Input/50nsData.ini
@@ -1,5 +1,5 @@
 [general]
-additionalProducers = EventCountProducer electronMVAProducer corrJetsProducer
+additionalProducers = EventCountProducer electronMVAProducer corrJetsProducer50ns
 [crab]
 lumi_mask =/afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/certification/Collisions15/13TeV/Cert_246908-255031_13TeV_PromptReco_Collisions15_50ns_JSON_v2.txt
 
