--- a/Input/default74X.ini
+++ b/Input/default74X.ini
@@ -1,6 +1,6 @@
 [general]
 InputPath = Input/
-OutputPath = /user/schomakers/AnalysisData/
+OutputPath = /user/jschulte/AnalysisData/
 LocalOutputPath = /user/jschulte/jobOutput/624Test
 SiteOutputPath = /pnfs/physik.rwth-aachen.de/cms/store/user
 SitePath = /store/user
@@ -42,7 +42,7 @@ lumi_mask = ""
 publish = False
 pubDBSURL = phys03
 # all (merged)
-additional_input_files = ["/afs/cern.ch/user/c/cschomak/public/Summer15_25nsV2_MC.db","/afs/cern.ch/user/c/cschomak/public/Summer15_25nsV2_DATA.db","/afs/cern.ch/user/c/cschomak/public/Summer15_50nsV4_DATA.db"]
+additional_input_files = ["/afs/cern.ch/user/c/cschomak/public/Summer15_25nsV2_MC.db","/afs/cern.ch/user/c/cschomak/public/Summer15_25nsV2_DATA.db","/afs/cern.ch/user/c/cschomak/public/Summer15_50nsV4_DATA.db","/afs/cern.ch/user/c/cschomak/public/Summer15_25nsV5_DATA.db"]
 #~ additional_input_files = ["/afs/cern.ch/user/c/cschomak/public/Summer15_25nsV2_DATA.db"]
 #~ additional_input_files = ["/afs/cern.ch/user/c/cschomak/public/Summer15_50nsV4_DATA.db"]
 
@@ -102,9 +102,9 @@ analogpath = <general|OutputPath>/LOG/analysis
 #~ dbsurl = https://cmsdbsprod.cern.ch:8443/cms_dbs_ph_analysis_02_writer/servlet/DBSServlet
 #~ inputDBS = phys03
 inputDBS = global
-storagepath = <general|SitePath>/cschomak
-histogramstoragepath = <general|SitePath>/cschomak/data/Histos
-histogramoutputpath = <general|SiteOutputPath>/cschomak/data/Histos
+storagepath = <general|SitePath>/jschulte
+histogramstoragepath = <general|SitePath>/jschulte/data/Histos
+histogramoutputpath = <general|SiteOutputPath>/jschulte/data/Histos
 cmsstoragepath = <general|SitePath>
 famospath = /home/home4/institut_1b/nmohr/famos/223
 famosdatapath = <general|SitePath>
