add remaking of MET from miniaod, also configs for using miniAODv2

--- a/Input/25nsData.ini
+++ b/Input/25nsData.ini
@@ -1,7 +1,7 @@
 [general]
-additionalProducers = EventCountProducer electronMVAProducer corrJetsProducer
+additionalProducers = EventCountProducer electronMVAProducer corrJetsProducer metProducerMiniAOD
 [crab]
-lumi_mask =/afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/certification/Collisions15/13TeV/Cert_246908-257599_13TeV_PromptReco_Collisions15_25ns_JSON.txt
+lumi_mask =/afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/certification/Collisions15/13TeV/Cert_246908-258159_13TeV_PromptReco_Collisions15_25ns_JSON_v3.txt
 
 
 [74X]
