--- a/Input/25nsMC.ini
+++ b/Input/25nsMC.ini
@@ -1,5 +1,5 @@
 [general]
-additionalProducers = EventCountProducer electronMVAProducer corrJetsProducerMC
+additionalProducers = EventCountProducer electronMVAProducer corrJetsProducerMC metProducerMiniAOD_MC
 [crab]
 
 
