synch with ETH again, adjust trigger requirements for non-iso triggers

--- a/Input/25nsData.ini
+++ b/Input/25nsData.ini
@@ -1,5 +1,8 @@
 [general]
-additionalProducers = EventCountProducer electronMVAProducer corrJetsProducer metProducerMiniAOD
+additionalProducers = EventCountProducer electronMVAProducer
+# use below if JEC change. Do not forget to also change MET input-Tags in python config!
+#additionalProducers = EventCountProducer electronMVAProducer corrJetsProducer metProducerMiniAOD
+
 [crab]
 lumi_mask =/afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/certification/Collisions15/13TeV/Cert_246908-258159_13TeV_PromptReco_Collisions15_25ns_JSON_v3.txt
 
