--- a/Input/25nsMC.ini
+++ b/Input/25nsMC.ini
@@ -1,9 +1,12 @@
 [general]
-additionalProducers = EventCountProducer electronMVAProducer corrJetsProducerMC metProducerMiniAOD_MC
+additionalProducers = EventCountProducer electronMVAProducer
+# use below if JEC change. Do not forget to also change MET input-Tags in python config!
+#additionalProducers = EventCountProducer electronMVAProducer corrJetsProducerMC metProducerMiniAOD_MC
+
 [crab]
 
 
 
 [74X]
-master_list = <general|InputPath>/Master74X_25nsMC.ini
+master_list = <general|InputPath>/Master74X_25nsMC_ReMiniAOD.ini
 globalTag = MCRUN2_74_V9
