--- a/Input/default74X.ini
+++ b/Input/default74X.ini
@@ -26,7 +26,7 @@ groups = StandardModel SUSY
        TTJets ZJets WJets Diboson QCD MinBias Dilepton SingleTop Rare PythiaWZ AStar TT Dileptonic ZZ DrellYan
        at13TeV at25ns at50ns noPU
        SingleElectron DoubleElectron SingleMu DoubleMu ElectronHad MuHad HT TauPlusX MuEG MET HTMHT 
-       Data MC AOD RelVal MiniAOD
+       Data MC AOD RelVal MiniAOD MiniAODv2
        Run2015B Run2015C Run2015D 
 
 [crab]
