--- a/Input/Master74X_25nsMC_ReMiniAOD.ini
+++ b/Input/Master74X_25nsMC_ReMiniAOD.ini
@@ -4,7 +4,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen DrellYan aMCatNLO Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen DrellYan aMCatNLO Spring15 at25ns MiniAODv2
 #from ETH via AN draft
 crosssection = 18610
 negWeightFraction = 0.136
@@ -16,7 +16,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen DrellYan aMCatNLO Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen DrellYan aMCatNLO Spring15 at25ns MiniAODv2
 #from ETH via AN draft
 crosssection = 6104
 negWeightFraction = 0.165
@@ -31,7 +31,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen DrellYan Madgraph Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen DrellYan Madgraph Spring15 at25ns MiniAODv2
 #8 TeV xsec scaled by the same factor as > 50 GeV
 crosssection = 0.0
 negWeightFraction = 0.0
@@ -44,7 +44,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen DrellYan Madgraph Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen DrellYan Madgraph Spring15 at25ns 
 #3*2008.4 (NNLO)
 crosssection = 6025.200000000001
 negWeightFraction = 0.0
@@ -57,7 +57,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen DrellYan Madgraph Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen DrellYan Madgraph Spring15 at25ns MiniAODv2
 #(LO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns)
 crosssection = 139.4 
 negWeightFraction = 0.0
@@ -69,7 +69,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen DrellYan Madgraph Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen DrellYan Madgraph Spring15 at25ns MiniAODv2
 #(LO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns)
 crosssection = 42.75 
 negWeightFraction = 0.0
@@ -93,7 +93,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen DrellYan Madgraph Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen DrellYan Madgraph Spring15 at25ns MiniAODv2
 #(LO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns)
 crosssection = 2.21
 negWeightFraction = 0.0
@@ -105,7 +105,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen DrellYan Madgraph Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen DrellYan Madgraph Spring15 at25ns MiniAODv2
 #(LO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns)
 crosssection = 224.2
 negWeightFraction = 0.0
@@ -117,7 +117,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen DrellYan Madgraph Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen DrellYan Madgraph Spring15 at25ns MiniAODv2
 #(LO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns)
 crosssection = 37.2
 negWeightFraction = 0.0
@@ -129,7 +129,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen DrellYan Madgraph Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen DrellYan Madgraph Spring15 at25ns 
 #(LO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns)
 crosssection = 0.0
 negWeightFraction = 0.0
@@ -141,7 +141,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen DrellYan Madgraph Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen DrellYan Madgraph Spring15 at25ns MiniAODv2
 #(LO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns)
 crosssection = 1.124
 negWeightFraction = 0.0
@@ -158,12 +158,12 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns MiniAODv2
 #(NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns)
 crosssection = 0
 negWeightFraction = 0.0
-datasetpath = /WWTo1L1Nu2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath = /WWTo1L1Nu2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
+datasetpath = /WWTo1L1Nu2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+localdbspath = /WWTo1L1Nu2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 
 
 [WZTo1L3Nu_aMCatNLO_Spring15_25ns]
@@ -171,12 +171,12 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns MiniAODv2
 #(NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns)
 crosssection = 0.0
 negWeightFraction = 0.0
-datasetpath = /WZTo1L3Nu_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath = /WZTo1L3Nu_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
+datasetpath = /WZTo1L3Nu_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
+localdbspath = /WZTo1L3Nu_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 
 
 [WZTo1L1Nu2Q_aMCatNLO_Spring15_25ns]
@@ -184,7 +184,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns MiniAODv2
 #(NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns)
 crosssection = 10.71 
 negWeightFraction = 0.210
@@ -196,7 +196,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns MiniAODv2
 #(NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns)
 crosssection = 5.60 
 negWeightFraction = 0.0
@@ -209,7 +209,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns MiniAODv2
 crosssection = 4.04
 negWeightFraction = 0.193
 datasetpath = /ZZTo2Q2Nu_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
@@ -221,7 +221,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns MiniAODv2
 crosssection = 3.28
 negWeightFraction = 0.184
 datasetpath = /ZZTo2L2Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
@@ -243,7 +243,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen Diboson aMCatNLO Spring15 at25ns MiniAODv2
 crosssection = 0.0
 negWeightFraction = 0.191
 datasetpath = /ZZTo4Q_13TeV_amcatnloFXFX_madspin_pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
@@ -295,7 +295,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Diboson Powheg Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen Diboson Powheg Spring15 at25ns MiniAODv2
 # NLO from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
 crosssection = 10.481
 negWeightFraction = 0.0
@@ -308,19 +308,19 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Diboson Powheg Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen Diboson Powheg Spring15 at25ns MiniAODv2
 # NLO from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
 crosssection = 45.20
 negWeightFraction = 0.0
-datasetpath = /WWTo4Q_13TeV-powheg/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v3/MINIAODSIM
-localdbspath = /WWTo4Q_13TeV-powheg/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v3/MINIAODSIM
+datasetpath = /WWTo4Q_13TeV-powheg/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v2/MINIAODSIM
+localdbspath = /WWTo4Q_13TeV-powheg/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v2/MINIAODSIM
 
 [WWToLNuQQ_Powheg_Spring15_25ns]
 status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Diboson Powheg Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen Diboson Powheg Spring15 at25ns MiniAODv2
 # NLO from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
 crosssection = 43.53
 negWeightFraction = 0.0
@@ -361,7 +361,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen SingleTop Powheg Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen SingleTop Powheg Spring15 at25ns MiniAODv2
 #
 crosssection = 35.6
 negWeightFraction = 0.0
@@ -373,12 +373,12 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen SingleTop Powheg Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen SingleTop Powheg Spring15 at25ns MiniAODv2
 #
 crosssection = 35.6
 negWeightFraction = 0.0
-datasetpath = /ST_tW_top_5f_inclusiveDecays_13TeV-powheg-pythia8_TuneCUETP8M1/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
-localdbspath = /ST_tW_top_5f_inclusiveDecays_13TeV-powheg-pythia8_TuneCUETP8M1/RunIISpring15DR74-Asympt25ns_MCRUN2_74_V9-v1/MINIAODSIM
+datasetpath = /ST_tW_top_5f_inclusiveDecays_13TeV-powheg-pythia8_TuneCUETP8M1/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v2/MINIAODSIM
+localdbspath = /ST_tW_top_5f_inclusiveDecays_13TeV-powheg-pythia8_TuneCUETP8M1/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v2/MINIAODSIM
 
 
 ######### Single Top aMCatNLO
@@ -389,7 +389,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen SingleTop Powheg Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen SingleTop Powheg Spring15 at25ns MiniAODv2
 #
 crosssection = 11.36
 negWeightFraction = 0.188
@@ -415,7 +415,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen WJets aMCatNLO Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen WJets aMCatNLO Spring15 at25ns MiniAODv2
 #3* 20508.9 (NNLO QCD)
 crosssection = 61526.7
 negWeightFraction = 0.158
@@ -431,7 +431,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen WJets Madgraph Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen WJets Madgraph Spring15 at25ns MiniAODv2
 #LO cross section from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
 crosssection = 1347
 negWeightFraction = 0.0
@@ -468,7 +468,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen WJets Madgraph Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen WJets Madgraph Spring15 at25ns MiniAODv2
 #LO cross section from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
 crosssection = 12.8
 negWeightFraction = 0.0
@@ -491,7 +491,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen WJets Madgraph Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen WJets Madgraph Spring15 at25ns MiniAODv2
 #LO cross section from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
 crosssection = 1.33
 negWeightFraction = 0.0
@@ -503,7 +503,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen WJets Madgraph Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen WJets Madgraph Spring15 at25ns MiniAODv2
 #LO cross section from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
 crosssection = 0.03089
 negWeightFraction = 0.0
@@ -519,7 +519,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen TT Madgraph Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen TT Madgraph Spring15 at25ns MiniAODv2
 # NNLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
 crosssection = 87.31
 negWeightFraction = 0.0
@@ -579,7 +579,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen TT Madgraph Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen TT Madgraph Spring15 at25ns MiniAODv2
 # NNLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
 crosssection = 182.15544
 negWeightFraction = 0.0
@@ -602,7 +602,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen TT Madgraph Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen TT Madgraph Spring15 at25ns MiniAODv2
 crosssection = 831.76
 negWeightFraction = 0.0
 datasetpath =  /TTJets_TuneCUETP8M1_13TeV-madgraphMLM-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
@@ -614,7 +614,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen TT aMCatNLO Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen TT aMCatNLO Spring15 at25ns MiniAODv2
 crosssection = 831.76
 negWeightFraction = 0.334
 datasetpath =  /TTJets_TuneCUETP8M1_13TeV-amcatnloFXFX-pythia8/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v3/MINIAODSIM
@@ -649,7 +649,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen TT Powheg Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen TT Powheg Spring15 at25ns MiniAODv2
 crosssection = 87.31
 negWeightFraction = 0.0
 datasetpath =   /TTTo2L2Nu_13TeV-powheg/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
@@ -676,7 +676,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns MiniAODv2
 # NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
 crosssection = 0.5297
 negWeightFraction = 0.266
@@ -688,7 +688,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns MiniAODv2
 # NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
 crosssection = 0.2043
 negWeightFraction = 0.243
@@ -700,7 +700,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns MiniAODv2
 # NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
 crosssection = 0.0
 negWeightFraction = 0.0
@@ -713,7 +713,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns MiniAODv2
 # NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
 crosssection = 0.0
 negWeightFraction = 0.0
@@ -728,7 +728,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns MiniAODv2
 # LO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
 crosssection = 0.1651
 negWeightFraction = 0.0
@@ -740,7 +740,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns MiniAODv2
 # LO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
 crosssection = 0.05565
 negWeightFraction = 0.0
@@ -752,7 +752,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns MiniAODv2
 # LO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
 crosssection = 0.01398
 negWeightFraction = 0.0
@@ -764,7 +764,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns MiniAODv2
 # NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
 crosssection = 0.0
 negWeightFraction = 0.291
@@ -777,7 +777,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns MiniAODv2
 # NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
 crosssection = 0.0758
 negWeightFraction = 0.367
@@ -789,7 +789,7 @@ status = CREATED
 numevents = -1
 kfactor = 1.
 localevents = -1
-groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns
+groups = MC CMSSW74X at13TeV Aachen Rare aMCatNLO Spring15 at25ns MiniAODv2
 # NLO xsec from https://twiki.cern.ch/twiki/bin/viewauth/CMS/SummaryTable1G25ns
 crosssection = 0.1379
 negWeightFraction = 0.367
@@ -797,6 +797,11 @@ datasetpath = /tZq_nunu_4f_13TeV-amcatnlo-pythia8_TuneCUETP8M1/RunIISpring15Mini
 localdbspath = /tZq_nunu_4f_13TeV-amcatnlo-pythia8_TuneCUETP8M1/RunIISpring15MiniAODv2-74X_mcRun2_asymptotic_v2-v1/MINIAODSIM
 
 [SynchFiles]
+groups = AOD
+datasetpath = 
+localdbspath =
+
+[SynchFiles2]
 groups = AOD
 datasetpath = 
 localdbspath =
