--- a/Input/Master74X_ReMiniAOD.ini
+++ b/Input/Master74X_ReMiniAOD.ini
@@ -42,6 +42,17 @@ negWeightFraction = 0.
 datasetpath = /DoubleMuon/Run2015D-05Oct2015-v1/MINIAOD
 localdbspath = /DoubleMuon/Run2015D-05Oct2015-v1/MINIAOD
 
+[MuEG_Run2015D_05Oct2015]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW74X at13TeV Aachen at25ns MuEG Run2015D
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath =  /MuonEG/Run2015D-05Oct2015-v1/MINIAOD
+localdbspath = /MuonEG/Run2015D-05Oct2015-v1/MINIAOD
+
 [MuEG_Run2015D_PromptRecov4]
 status = CREATED
 numevents = -1
@@ -52,6 +63,18 @@ crosssection = 0.
 negWeightFraction = 0.
 datasetpath = /MuonEG/Run2015D-PromptReco-v4/MINIAOD
 localdbspath = /MuonEG/Run2015D-PromptReco-v4/MINIAOD
+
+
+[HT_Run2015D_05Oct2015]
+status = CREATED
+numevents = -1
+kfactor = 1.
+localevents = -1
+groups = Data CMSSW74X at13TeV Aachen at25ns HT Run2015D
+crosssection = 0.
+negWeightFraction = 0.
+datasetpath = /JetHT/Run2015D-05Oct2015-v1/MINIAOD
+localdbspath = /JetHT/Run2015D-05Oct2015-v1/MINIAOD
 
 [HT_Run2015D_PromptRecov4]
 status = CREATED
@@ -88,6 +111,11 @@ localdbspath = /HTMHT/Run2015D-05Oct2015-v1/MINIAOD
 
 
 [SynchFiles]
+groups = AOD
+datasetpath = 
+localdbspath =
+
+[SynchFiles2]
 groups = AOD
 datasetpath = 
 localdbspath =
